--- a/BTU_Project/pom.xml
+++ b/BTU_Project/pom.xml
@@ -40,5 +40,17 @@
         <artifactId>webdrivermanager</artifactId>
         <version>4.2.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-support</artifactId>
+        <version>4.3.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.13.1</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 </project>
